# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  spec.yaml  sqlx-data.json
.devcontainer/: .template.env  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install_helpers.sh  install_redis_cli.sh
.github/workflows/: general.yaml
configuration/: base.yaml  production.yaml
migrations/: 20221121203907_add_status_to_subscriptions.sql  20221126120938_rename_password_column.sql  20221126133056_add_salt_to_users.sql  20221126140139_remove_salt_from_users.sql  20221127163734_seed_user.sql  20221129205627_relax_null_checks_on_idempotency.sql  20221129231323_create_newsletter_issues_table.sql  20221129232158_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
(+3 files in other folders)
