[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
config = "0.13.2"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
uuid = { version = "1.2.1", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.2"
serde-aux = "4.1.0"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
# We need the `json` feature flag to serialize/deserialize JSON payloads
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
claims = "0.7.1"
fake = "2.5.0"
once_cell = "1.16.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
wiremock = "0.5.15"
